Bug 255289 - Web Content process crash decoding RVItem when selecting phone number on iOS
Summary: Web Content process crash decoding RVItem when selecting phone number on iOS
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Horton
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-11 09:52 PDT by Tim Horton
Modified: 2023-04-11 11:18 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2023-04-11 09:52:39 PDT
Web Content process crash decoding RVItem when selecting phone number on iOS
Comment 1 Tim Horton 2023-04-11 09:52:47 PDT
<rdar://problem/107673064>
Comment 2 Tim Horton 2023-04-11 09:53:51 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12615
Comment 3 EWS 2023-04-11 11:18:12 PDT
Committed 262830@main (5d7e53559df0): <https://commits.webkit.org/262830@main>

Reviewed commits have been landed. Closing PR #12615 and removing active labels.