Web Content process crash decoding RVItem when selecting phone number on iOS https://bugs.webkit.org/show_bug.cgi?id=255289 rdar://107673064

Reviewed by Chris Dumez.

* Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.mm:
(IPC::shouldEnableStrictMode):
Downgrade RVItem back to NSSecureCoding until the NSMutableArray-child problem is solved.

Canonical link: https://commits.webkit.org/262830@main